--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(CURC LANGUAGES C CXX)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(GetVersion)
 include(CheckLanguage)
+option(CURC_DISABLE_ARCH_CHECK "Disable gpu architecture checks" OFF)
 check_language(CUDA)
 if(CMAKE_CUDA_COMPILER)
     enable_language(CUDA)
@@ -12,10 +13,11 @@ if(CMAKE_CUDA_COMPILER)
     execute_process(COMMAND ${CHECK_CUDA_EXE}
             RESULT_VARIABLE CUDA_RETURN_CODE
             OUTPUT_VARIABLE ARCH)
-    if(${CUDA_RETURN_CODE} EQUAL 0)
-        message(STATUS "CUDA_ARCHITECTURE : ${ARCH}")
-    else()
-        message(FATAL_ERROR "CUDA_ARCHITECTURE require >= 60")
+    message(STATUS "CUDA_ARCHITECTURE : ${ARCH}")
+    if (NOT CURC_DISABLE_ARCH_CHECK)
+        if(NOT ${CUDA_RETURN_CODE} EQUAL 0)
+            message(FATAL_ERROR "CUDA_ARCHITECTURE require >= 37")
+        endif()
     endif()
 else()
     message(FATAL_ERROR "No CUDA support")
