--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ add_custom_target(
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/third_party/fast-lzma2/
 )
 
-add_executable(curc src/main.cpp src/compress.cu src/decompress.cpp src/fast_lzma2_helper.cpp ${LZMA_FILES})
+add_executable(curc src/main.cpp src/preprocess.cpp src/compress.cu src/decompress.cu src/fast_lzma2_helper.cpp ${LZMA_FILES})
 add_executable(bsc ${LIBBSC_SOURCE_FILES})
 # add_executable(bench bench/benchmark.cpp)
 # add_executable(sort_pe_read bench/sort_pe_read.cpp)
